# polycubes

./: .gitignore  Cargo.toml
src/: block_arrangement.rs  block_hash.rs  blocks.rs  main.rs  mapper.rs  orientation.rs  point.rs  poly_tree.rs
src/block_arrangement/: block_sets.rs  block_variation.rs
src/block_arrangement/block_sets/: hash_blockset.rs
