[package]
name = "cube_combinations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fixedbitset = "0.4.2"

getset = "0.1.2"

rust_decimal = "1.31.0"

strum = { version = "0.25", features = ["derive"] }
