[package]
name = "cube_combinations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fixedbitset = { version = "0.4.2", features = ["serde"]}

getset = "0.1.2"

rust_decimal = { version = "1.31.0", features = ["serde"]}

strum = { version = "0.25", features = ["derive"] }

serde = { version = "1.0.179", features = ["derive"]}

bincode = "2.0.0-rc.3"